@@ -3,3 +3,8 @@ Makefile.in
 aclocal.m4
 autom4te.cache
 configure
+build-aux
+include/libport
+lib/libport
+lib/network
+sdk
