@@ -88,7 +88,7 @@ usystem.cc
 ## ------------ ##
 
 REVISION_FILE = version.hh
-include $(top_srcdir)/libport/build-aux/revision.mk
+include $(top_srcdir)/build-aux/revision.mk
 
 
 
@@ -96,7 +96,7 @@ include $(top_srcdir)/libport/build-aux/revision.mk
 ## uobject/.  ##
 ## ---------- ##
 
-include $(top_srcdir)/libport/build-aux/svn-externals.mk
+include $(top_srcdir)/build-aux/svn-externals.mk
 
 include $(top_srcdir)/urbi-sdk-remote/src/liburbi/uobject/uobject.mk
 nodist_libkernel_la_SOURCES += $(uobject_sources)
@@ -107,7 +107,7 @@ nodist_libkernel_la_SOURCES += $(uobject_sources)
 ## ----------------- ##
 
 include parser/parser.mk
-nodist_libkernel_la_SOURCES += $(libport_sources)
+dist_libkernel_la_SOURCES += $(libport_sources)
 
 urbiinclude_HEADERS = $(uobject_headers)
 
@@ -121,12 +121,12 @@ bin_PROGRAMS = urbi-console
 urbi_console_SOURCES = urbi-console.cc
 urbi_console_LDADD = libkernel.la
 
-dist_libkernel_la_SOURCES +=				\
-console-server.cc					\
-$(top_srcdir)/libport/network/bsdnet/connection.hh	\
-$(top_srcdir)/libport/network/bsdnet/connection.cc	\
-$(top_srcdir)/libport/network/bsdnet/network.hh		\
-$(top_srcdir)/libport/network/bsdnet/network.cc
+dist_libkernel_la_SOURCES +=			\
+console-server.cc				\
+$(top_srcdir)/lib/network/bsdnet/connection.hh	\
+$(top_srcdir)/lib/network/bsdnet/connection.cc	\
+$(top_srcdir)/lib/network/bsdnet/network.hh	\
+$(top_srcdir)/lib/network/bsdnet/network.cc
 
 # FIXME: We might need this guy somewhere: $(PTHREAD_LIBS).  In
 # libkernel, or urbi_console_LDADD?
